--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = '1.0-7' %}
-
+{% set version = '1.0-8' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,44 +9,53 @@ package:
 source:
   fn: truncnorm_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/truncnorm_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/truncnorm/truncnorm_{{ version }}.tar.gz
-  sha256: c7d775d09e2dcbcc543c03a207b4407b8548b5fdfeb4c017f12818507e014ce1
+    - {{ cran_mirror }}/src/contrib/truncnorm_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/truncnorm/truncnorm_{{ version }}.tar.gz
+  sha256: 49564e8d87063cf9610201fbc833859ed01935cc0581b9e21c42a0d21a47c87e
 
 build:
   merge_build_host: True  # [win]
-  number: 2
+  number: 0
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
+
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
 
 test:
   commands:
-    - $R -e "library('truncnorm')"  # [not win]
+    - $R -e "library('truncnorm')"           # [not win]
     - "\"%R%\" -e \"library('truncnorm')\""  # [win]
 
 about:
-  home: https://CRAN.R-project.org/package=truncnorm
-  license: GPL-2
-  summary: r/d/p/q functions for the truncated normal distribution
-  license_family: GPL2
+  home: https://github.com/olafmersmann/truncnorm
+  license: GPL (>= 2)
+  summary: Density, probability, quantile and random number generation functions for the truncated
+    normal distribution.
+  license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
     - dpryan79
-    - jdblischak
     - johanneskoester
     - bgruening
     - daler
+    - jdblischak
+    - cbrueffer
+    - dbast
