--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,7 @@ source:
   sha256: 5156acc4d63243bf95326d6285b0ba3cdf710697d67c233a12ae56f3d87ec708
 
 build:
-  number: 2
-  skip: true  # [win32]
+  number: 3
   rpaths:
     - lib/R/lib/
     - lib/
@@ -30,6 +29,7 @@ requirements:
     - {{ posix }}sed               # [win]
     - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
   run:
@@ -44,7 +44,6 @@ about:
   home: https://github.com/olafmersmann/truncnorm
   license: GPL (>= 2)
   summary: Density, probability, quantile and random number generation functions for the truncated normal distribution.
-  license_family: GPL3
   license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
