--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
   sha256: 5156acc4d63243bf95326d6285b0ba3cdf710697d67c233a12ae56f3d87ec708
 
 build:
-  number: 3
+  number: 4
   rpaths:
     - lib/R/lib/
     - lib/
@@ -42,7 +42,7 @@ test:
 
 about:
   home: https://github.com/olafmersmann/truncnorm
-  license: GPL-2.0.-or-later
+  license: GPL-2.0-or-later
   summary: Density, probability, quantile and random number generation functions for the truncated normal distribution.
   license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
